src/snapshots/glass__parser__tests__named_field_pattern.snap
---
source: src/parser.rs
expression: "parse_expr_str(\"case e { Chat { from, text } -> from _ -> 0 }\")"
---
Spanned {
    node: Case {
        subject: Spanned {
            node: Var(
                "e",
            ),
            span: Span {
                start: 5,
                end: 6,
            },
        },
        arms: [
            CaseArm {
                pattern: Spanned {
                    node: ConstructorNamed {
                        name: "Chat",
                        fields: [
                            FieldPattern {
                                field_name: "from",
                                binding: None,
                            },
                            FieldPattern {
                                field_name: "text",
                                binding: None,
                            },
                        ],
                        rest: false,
                    },
                    span: Span {
                        start: 9,
                        end: 28,
                    },
                },
                guard: None,
                body: Spanned {
                    node: Var(
                        "from",
                    ),
                    span: Span {
                        start: 32,
                        end: 36,
                    },
                },
                span: Span {
                    start: 9,
                    end: 36,
                },
            },
            CaseArm {
                pattern: Spanned {
                    node: Discard,
                    span: Span {
                        start: 37,
                        end: 38,
                    },
                },
                guard: None,
                body: Spanned {
                    node: Int(
                        0,
                    ),
                    span: Span {
                        start: 42,
                        end: 43,
                    },
                },
                span: Span {
                    start: 37,
                    end: 43,
                },
            },
        ],
    },
    span: Span {
        start: 0,
        end: 45,
    },
}
