src/snapshots/glass__parser__tests__precedence.snap
---
source: src/parser.rs
expression: "parse_expr_str(\"a + b * c\")"
---
Spanned {
    node: BinOp {
        op: Add,
        left: Spanned {
            node: Var(
                "a",
            ),
            span: Span {
                start: 0,
                end: 1,
            },
        },
        right: Spanned {
            node: BinOp {
                op: Mul,
                left: Spanned {
                    node: Var(
                        "b",
                    ),
                    span: Span {
                        start: 4,
                        end: 5,
                    },
                },
                right: Spanned {
                    node: Var(
                        "c",
                    ),
                    span: Span {
                        start: 8,
                        end: 9,
                    },
                },
            },
            span: Span {
                start: 4,
                end: 9,
            },
        },
    },
    span: Span {
        start: 0,
        end: 9,
    },
}
